--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Calculadora de IMC</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href=".//css/style.css">
+   <script src=".//JS/script.js"></script>
 </head>
 <body>
   <div class="container">
@@ -38,6 +39,5 @@
       </div>
     </div>
   </div>
-  <script src="script.js"></script>
 </body>
 </html>
